--- a/blog-app/package.json
+++ b/blog-app/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "axios": "^1.6.5",
     "mongoose": "^8.1.0",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.0.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-toastify": "^10.0.3"
   },
   "devDependencies": {
